packages/@expo/config/src/__tests__/__snapshots__/getConfig-e2e-test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig throws a useful error for a project with an external syntax error 1`] = `
"Error reading Expo config at /home/runner/work/expo-cli/expo-cli/packages/config/src/__tests__/fixtures/external-error/app.config.js:

Cannot use import statement outside a module
/home/runner/work/expo-cli/expo-cli/packages/config/src/__tests__/fixtures/external-error/other.js:2
import 'fs';
^^^^^^
"
`;
